// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[Component] HeaderSwitch Switch value change 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flexDirection": "row",
      "justifyContent": "center",
      "marginLeft": 10,
      "marginRight": 5,
      "paddingBottom": 10,
      "paddingTop": 10,
    }
  }
>
  <Text
    allowFontScaling={false}
    style={
      Array [
        Object {
          "color": "#D1DEEE",
          "fontSize": 20,
        },
        undefined,
        Object {
          "fontFamily": "Material Design Icons",
          "fontStyle": "normal",
          "fontWeight": "normal",
        },
        Object {},
      ]
    }
  >
    󰕰
  </Text>
  <RCTSwitch
    accessibilityRole="switch"
    onChange={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    onTintColor="rgba(61,99,145,0.5)"
    style={
      Array [
        Object {
          "height": 31,
          "width": 51,
        },
        Object {
          "marginLeft": 2,
        },
      ]
    }
    testID="SwitcherState-0"
    thumbTintColor="#ffffff"
    tintColor="rgba(148,174,206,0.3)"
    value={false}
  />
  <Text
    allowFontScaling={false}
    style={
      Array [
        Object {
          "color": "#D1DEEE",
          "fontSize": 22,
        },
        undefined,
        Object {
          "fontFamily": "Material Design Icons",
          "fontStyle": "normal",
          "fontWeight": "normal",
        },
        Object {},
      ]
    }
  >
    󰉹
  </Text>
</View>
`;

exports[`[Component] HeaderSwitch Switch value change 2`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flexDirection": "row",
      "justifyContent": "center",
      "marginLeft": 10,
      "marginRight": 5,
      "paddingBottom": 10,
      "paddingTop": 10,
    }
  }
>
  <Text
    allowFontScaling={false}
    style={
      Array [
        Object {
          "color": "#D1DEEE",
          "fontSize": 20,
        },
        undefined,
        Object {
          "fontFamily": "Material Design Icons",
          "fontStyle": "normal",
          "fontWeight": "normal",
        },
        Object {},
      ]
    }
  >
    󰕰
  </Text>
  <RCTSwitch
    accessibilityRole="switch"
    onChange={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    onTintColor="rgba(61,99,145,0.5)"
    style={
      Array [
        Object {
          "height": 31,
          "width": 51,
        },
        Object {
          "marginLeft": 2,
        },
      ]
    }
    testID="SwitcherState-1"
    thumbTintColor="#3D6391"
    tintColor="rgba(148,174,206,0.3)"
    value={true}
  />
  <Text
    allowFontScaling={false}
    style={
      Array [
        Object {
          "color": "#D1DEEE",
          "fontSize": 22,
        },
        undefined,
        Object {
          "fontFamily": "Material Design Icons",
          "fontStyle": "normal",
          "fontWeight": "normal",
        },
        Object {},
      ]
    }
  >
    󰉹
  </Text>
</View>
`;

exports[`[Component] HeaderSwitch renders correctly with switch false 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flexDirection": "row",
      "justifyContent": "center",
      "marginLeft": 10,
      "marginRight": 5,
      "paddingBottom": 10,
      "paddingTop": 10,
    }
  }
>
  <Text
    allowFontScaling={false}
    style={
      Array [
        Object {
          "color": "#D1DEEE",
          "fontSize": 20,
        },
        undefined,
        Object {
          "fontFamily": "Material Design Icons",
          "fontStyle": "normal",
          "fontWeight": "normal",
        },
        Object {},
      ]
    }
  >
    󰕰
  </Text>
  <RCTSwitch
    accessibilityRole="switch"
    onChange={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    onTintColor="rgba(61,99,145,0.5)"
    style={
      Array [
        Object {
          "height": 31,
          "width": 51,
        },
        Object {
          "marginLeft": 2,
        },
      ]
    }
    testID="SwitcherState-0"
    thumbTintColor="#ffffff"
    tintColor="rgba(148,174,206,0.3)"
    value={false}
  />
  <Text
    allowFontScaling={false}
    style={
      Array [
        Object {
          "color": "#D1DEEE",
          "fontSize": 22,
        },
        undefined,
        Object {
          "fontFamily": "Material Design Icons",
          "fontStyle": "normal",
          "fontWeight": "normal",
        },
        Object {},
      ]
    }
  >
    󰉹
  </Text>
</View>
`;

exports[`[Component] HeaderSwitch renders correctly with switch right 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flexDirection": "row",
      "justifyContent": "center",
      "marginLeft": 10,
      "marginRight": 5,
      "paddingBottom": 10,
      "paddingTop": 10,
    }
  }
>
  <Text
    allowFontScaling={false}
    style={
      Array [
        Object {
          "color": "#D1DEEE",
          "fontSize": 20,
        },
        undefined,
        Object {
          "fontFamily": "Material Design Icons",
          "fontStyle": "normal",
          "fontWeight": "normal",
        },
        Object {},
      ]
    }
  >
    󰕰
  </Text>
  <RCTSwitch
    accessibilityRole="switch"
    onChange={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    onTintColor="rgba(61,99,145,0.5)"
    style={
      Array [
        Object {
          "height": 31,
          "width": 51,
        },
        Object {
          "marginLeft": 2,
        },
      ]
    }
    testID="SwitcherState-1"
    thumbTintColor="#3D6391"
    tintColor="rgba(148,174,206,0.3)"
    value={true}
  />
  <Text
    allowFontScaling={false}
    style={
      Array [
        Object {
          "color": "#D1DEEE",
          "fontSize": 22,
        },
        undefined,
        Object {
          "fontFamily": "Material Design Icons",
          "fontStyle": "normal",
          "fontWeight": "normal",
        },
        Object {},
      ]
    }
  >
    󰉹
  </Text>
</View>
`;
